--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "telegraf": "^4.16.3"
   },
   "devDependencies": {
+    "@types/better-sqlite3": "^7.6.12",
     "@types/node": "^22.14.0",
     "tsx": "^4.20.3",
     "typescript": "^5.8.3"
